Firefox dictionary scrollbar fix
Previously, a native scrollbar showed up alongside the simplebar one in Firefox. This was because of the borders on .dictionary.

--- a/tools/cmdline/css/style.scss
+++ b/tools/cmdline/css/style.scss
@@ -163,6 +163,7 @@ main {
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
     -ms-overflow-style: none;
     overflow-x: hidden;
+    box-sizing: content-box;
 
     li {
         font-size: 13px;
